version: "1.2.0"
opam-version: "2.0"
maintainer: "saiganesha5.svkv@gmail.com"
authors: [ "Thomas Leonard" ]
license: "ISC"
homepage: "https://github.com/mirage/mirage-logs"
dev-repo: "git+https://github.com/mirage/mirage-logs.git"
bug-reports: "https://github.com/mirage/mirage-logs/issues"
doc: "https://mirage.github.io/mirage-logs/"
tags: ["org:mirage"]
depends: [
  "ocaml-riscv" { >= "4.06.0"}
  "dune" {>= "1.0"}
  "logs-riscv" { >= "0.5.0" }
  "ptime-riscv" { >= "0.8.1" }
  "mirage-clock-riscv" { >= "3.0.0"}
  "lwt-riscv"
  "alcotest" {with-test}
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-x" "riscv" "-p" "mirage-logs" "-j" jobs]
  ["dune" "runtest" "-p" name] {with-test}
]
synopsis: "A reporter for the Logs library that writes log messages to stderr, using a Mirage `CLOCK` to add timestamps"
description: """
It can also log only important messages to the console, while writing all received messages to a ring buffer which is displayed if an exception occurs.

If tracing is enabled (via mirage-profile), it also writes each log message to the trace buffer.
"""